@@ -825,6 +825,15 @@ AC_MSG_RESULT($enable_fake_main)
 AC_ARG_ENABLE(libffi,
   [  --enable-libffi  		Enable use of libffi library],,
   enable_libffi=no)
+if test $enable_libffi = yes; then
+  AC_WARN(libffi support disabled)
+  echo
+  echo "GNUstep requires more functionality than the ffi library"
+  echo "currently supports ... please use ffcall instead."
+  echo "libffi support will be added when the ffi library improves"
+  enable_libffi=no
+fi
+
 AC_ARG_ENABLE(ffcall,
   [  --enable-ffcall  		Enable use of ffcall library],,
   enable_ffcall=yes)
